--- a/server/config/config.json
+++ b/server/config/config.json
@@ -9,9 +9,9 @@
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "coco_test",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   },
   "production": {
     "username": "root",
