--- a/server/package.json
+++ b/server/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.6.0",
     "sequelize": "^6.6.2",
+    "socket.io": "^4.1.2",
     "supertest": "^6.1.3"
   },
   "devDependencies": {
