--- a/server/config/config.json
+++ b/server/config/config.json
@@ -15,10 +15,10 @@
     "logging" : false
   },
   "production": {
-    "username": "root",
-    "password": null,
+    "username": "postgres",
+    "password": "postgres",
     "database": "database_production",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "postgres"
   }
 }
